<resources>
    <string name="app_name">WorldSalaryConverter</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Enter salary info below</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="second_fragment_intro">Your converted salary equals monthly: %1$s</string>

    <string name="currency_autocomplete_hint">Type offer currency symbol here</string>
    <string name="currency_target_autocomplete_hint">Type target currency symbol here</string>
    <string name="salary_filed">Type salary amount here </string>
    <string name="salary_period_menu">Choose payroll period </string>
    <string name="salary_period_hourly">hourly </string>
    <string name="salary_period_monthly">monthly </string>
    <string name="salary_period_yearly">yearly </string>
    <string name="currency_output">Target currency </string>
    <string name="convert_button_title">Convert please </string>

    <string-array name="currencies_array">
        <item>RUB</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>USD</item>
        <item>CAD</item>
        <item>AUD</item>
        <item>JPY</item>
    </string-array>
</resources>
