<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert_button_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payroll_period" />

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/hello_first_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <AutoCompleteTextView
        android:id="@+id/Currency_offer_autocomplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:completionThreshold='2'
        android:contentDescription="@string/currency_autocomplete_hint"
        android:hint="@string/currency_autocomplete_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_first" />

    <AutoCompleteTextView
        android:id="@+id/Currency_target_autocomplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:completionThreshold='2'
        android:contentDescription="@string/currency_target_autocomplete_hint"
        android:hint="@string/currency_target_autocomplete_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.532"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Currency_offer_autocomplete" />

    <EditText
        android:id="@+id/Salary_value_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/salary_filed"
        android:ems="10"
        android:hint="@string/salary_filed"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Currency_target_autocomplete" />

    <RadioGroup
        android:id="@+id/payroll_period"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Salary_value_input">

        <RadioButton
            android:id="@+id/hourly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salary_period_hourly" />

        <RadioButton
            android:id="@+id/monthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salary_period_monthly" />

        <RadioButton
            android:id="@+id/yearly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salary_period_yearly" />

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>